# OpenBikeComputerRTOS_ESP32

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partition_table.csv  platformio.ini  sdkconfig.defaults
3dcase/: case2.blend  obc_case_bottom.blend  obc_case_bottom.blend1  obc_case_bottom.stl  obc_case_bottom_m.blend  obc_case_mount_crude.blend1  obc_case_mount_crude2.blend  obc_case_mount_crude_print.stl  obc_case_top.blend  obc_case_top.blend1  obc_case_top.stl  obc_case_top_print.blend  obc_case_top_print.blend1  obc_case_top_print_txt.blend  obc_case_top_print_txt.blend1  obc_case_top_text.stl  reedSwitchHolder-cap.stl  reedSwitchHolder-main.stl  v1.1_front.FCStd  v1.2_front.FCStd  v1.2_front.FCStd1  v1_front.FCStd  v1_front.FCStd1
3dcase/partials/: case2.blend1  obc_case_bottom.stl  obc_case_mount_crude.blend1  obc_case_mount_crude_print.blend  obc_case_top.blend1  obc_case_top.stl  obc_case_top_print.blend  obc_case_top_print_txt.blend  obc_case_top_print_txt.blend1  obc_case_top_print_txt.mtl  obc_case_top_text.stl
3dcase/source/: obc_case_bottom.blend  obc_case_bottom.blend1  obc_case_mount_only.blend  obc_case_top.blend  (+3 more)
include/: self_test.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  obc.h  settings.h  wifi.c  wifi.h
main/Tasks/: pcd8544_font16x24.h  screen_pcd8544.c  screen_pcd8544.h
main/Tasks/bluetooth_le/: ble_main.c  ble_main.h  gat_server.c  gat_server.h  gatt_server.c  gatt_server.h
main/Tasks/core/: blinker.task.c  blinker.task.h  calcRideParamsOnISR.task.c  calcRideParamsOnISR.task.h  rideStatusWatchdog.task.c  rideStatusWatchdog.task.h
main/Tasks/screen_pcd8544/: pcd8544_font16x24.c  pcd8544_font16x24.h  pcd8544_font_utils.c  pcd8544_font_utils.h  screen_pcd8544.c  screen_pcd8544.h
main/Tasks/storage/: spiffs_main.c  spiffs_main.h
main/Tasks/sync/: obc_rest.task.c  obc_rest.task.h  sntp.task.c  sntp.task.h
main/utils/: macros.h  math.c  math.h
src/: main.c  main_old.c  obc.h  sdkconfig.h  self_test.c  settings.h
utils/: mirrorGLCDChar.js
(+14 files in other folders)
